--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 		"php" : ">7.4"
 	},
 	"require-dev" : {
-		"symfony/var-dumper" : "^5.3"
+		"symfony/var-dumper" : "^5",
+		"phpstan/phpstan": "^0"
 	},
 	"suggest": {
 		"symfony/stopwatch": "Provides a way to profile middlewares"
